<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snake-go</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="start_button">Start</string>
    <string name="reit_button">Ladder</string>
    <string name="exit_button">Exit</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="result">Result</string>
    <string name="ver">ver. 0.51b</string>
    <string name="logoname">Snake GO</string>
    <string name="clear_button">Clear</string>
    <string name="last">Last result:</string>
	<string name="id_admob">ca-app-pub-4885317560012072/3084761146</string>
</resources>
