<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:text="@string/logoname"
        android:textSize="34sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ladder"
        android:layout_alignRight="@+id/ladder"
        android:layout_below="@+id/logo_name"
        android:layout_marginTop="80dp"
        android:background="@drawable/button"
        android:text="@string/start_button"
        android:textSize="30sp"
  />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:src="@drawable/apple" />

    <TextView
        android:id="@+id/ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/ver"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/lastResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/applecoun"
        android:layout_below="@+id/applecoun"
        android:layout_marginRight="10dp"
        android:layout_marginTop="28dp" />

    <TextView
        android:id="@+id/applecoun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/last" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ladder"
        android:layout_alignRight="@+id/ladder"
        android:layout_below="@+id/ladder"
        android:layout_marginTop="19dp"
        android:background="@drawable/button"
        android:text="@string/exit_button"
        android:textSize="30sp" />

    <Button
        android:id="@+id/ladder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/button"
        android:text="@string/result"
        android:textSize="30sp" />

</RelativeLayout>